version/0.18/_sources/api/solver/_autosummary/settings/chemical_formula.rst.txt
:orphan:

.. _chemical_formula:

chemical_formula
================

.. autoclass:: ansys.fluent.core.solver.settings_232.chemical_formula.chemical_formula
    :show-inheritance:

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`fluid_child <fluid_child>`                                                 'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                                                 'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`                                           'child_object_type' of mixture.

:ref:`inert_particle_child <inert_particle_child>`                      'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`particle_mixture_child <particle_mixture_child>`                'child_object_type' of particle_mixture.

============================================================   ===============================================

