version/0.28/_sources/api/solver/_autosummary/settings/chemical_formula.rst.txt
:orphan:

.. _chemical_formula:

chemical_formula
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.chemical_formula
    :show-inheritance:

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`fluid_child <fluid_child>`                                                 'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                                                 'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`                                           'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`          'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                    'child_object_type' of material.

:ref:`inert_particle_child <inert_particle_child>`                      'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`particle_mixture_child <particle_mixture_child>`                'child_object_type' of particle_mixture.

:ref:`particle_species_child <particle_species_child>`                'child_object_type' of particle_species.

:ref:`material_4_child <material_4_child>`                                    'child_object_type' of material.

============================================================   ===============================================

